# rust-ray-tracer

./: Cargo.toml  README.md  scene.yaml  scene_large.yaml
benches/: geometry_benchmark.rs  main.rs  material_benchmark.rs  render_benchmark.rs
src/: bounding_box.rs  bvh.rs  camera.rs  color.rs  data.rs  geometry.rs  lib.rs  main.rs  material.rs  point3.rs  ray.rs  render.rs  scene.rs  vec3.rs
