[package]
name = "rust_ray_tracer"
version = "0.1.0"
authors = ["Valery Kharitonov <kharvd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.0", features = ["small_rng"] }
impl_ops = "0.1.1"

[profile.release]
debug = true