[package]
name = "rust_ray_tracer"
version = "0.1.0"
authors = ["Valery Kharitonov <kharvd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.0", features = ["small_rng"] }
impl_ops = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
image = "0.23.12"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false